#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(HCOS Plugins, 0.9.0)
AC_CONFIG_SRCDIR([verbose-dump/verbose-dump.c])
# Note that we do not generate a config.h because GCC already uses a
# config.h that plugins must include.
#AC_CONFIG_HEADER([config.h])
AC_CONFIG_AUX_DIR(config)

m4_include(m4/ax_gcc_plugin.m4)

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([inttypes.h])
# These header files are included unconditionally by GCC's system.h
AC_CHECK_HEADERS(stdarg.h stdio.h sys/types.h errno.h)

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS(fprintf)

# Get the plugin includes directory.
AX_GCC_PLUGIN

AC_CONFIG_FILES([Makefile
                 verbose-dump/Makefile
                 lock-trace/Makefile
                 lock-trace/test/Makefile
                 field-trace/Makefile
                 field-trace/test/Makefile
                 entryexit-trace/Makefile
                 entryexit-trace/test/Makefile
                 malloc-trace/Makefile
                 malloc-trace/test/Makefile
		 assign-trace/Makefile
		 assign-trace/test/Makefile])

AC_OUTPUT
