lib_LTLIBRARIES = libverbose_dump.la
libverbose_dump_la_SOURCES = verbose-dump.c
libverbose_dump_la_LDFLAGS = -version-info 1:0:0
#libverbose_dump_la_CPPFLAGS = -DHAVE_CONFIG_H -DIN_GCC -I$(gcc_build)/gcc -I$(gcc_source)/gcc -I$(gcc_source)/include -I$(gcc_build)/intl -I$(gcc_source)/libcpp/include
libverbose_dump_la_CPPFLAGS = -DHAVE_CONFIG_H -DIN_GCC -I$(gcc_includes)
