TESTS_ENVIRONMENT = CC=$(CC) \
	$(SHELL) $(top_srcdir)/test-driver.sh ../.libs libfield_trace \
	config $(srcdir)/field-trace.config
TESTS = field-test.c share-test.c stabilize-test.c attrib-test.c union-test.c \
	trans-union-test.c bitops-test.c union-write-test.c typedef-test.c \
	bitparam-test.c index-test.c
